各類模組重整

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -267,13 +267,13 @@
                                                 </a>
                                             </li>
                                             <li class="dropdown-item">
-                                                <a asp-page="OrdersetList_m" class="nav-link">
+                                                <a asp-page="OrderList_m" class="nav-link">
                                                     <i class="far fa-circle nav-icon Text2 icon-width"></i>
                                                     <span class="Text2">預約單查詢</span>
                                                 </a>
                                             </li>
                                             <li class="dropdown-item">
-                                                <a asp-page="Ordersetcalendar_m" class="nav-link">
+                                                <a asp-page="Ordercalendar_m" class="nav-link">
                                                     <i class="far fa-circle nav-icon Text2 icon-width"></i>
                                                     <span class="Text2">預約行事曆</span>
                                                 </a>
@@ -497,13 +497,13 @@
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a asp-page="OrdersetList_m" class="nav-link">
+                                                    <a asp-page="OrderList_m" class="nav-link">
                                                         <i class="far fa-circle nav-icon Text2 icon-width"></i>
                                                         <span class="Text2">預約單查詢</span>
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a asp-page="Ordersetcalendar_m" class="nav-link">
+                                                    <a asp-page="Ordercalendar_m" class="nav-link">
                                                         <i class="far fa-circle nav-icon Text2 icon-width"></i>
                                                         <span class="Text2">預約行事曆</span>
                                                     </a>
@@ -553,10 +553,10 @@
                                 </a>
                             </div>
                             <div class="col-md-8" style="padding-top:10px;">
-                                <!-- 這裡顯示 Orderset.Phone -->
+                                <!-- 這裡顯示 Order.Phone -->
                                 <div type="phone"><h5 class="modal-text"><i class="fas fa-phone"></i> @myData.Phone</h5></div>
 
-                                <!-- 這裡顯示 Orderset.Email -->
+                                <!-- 這裡顯示 Order.Email -->
                                 <div type="text"><h5 class="modal-text"><i class="fab fa-line"></i> @myData.Line_Url</h5></div>
                             </div>
                         </div>
